--- a/index.html
+++ b/index.html
@@ -1,1 +1,2 @@
 <h1>Mohd Akaram website</h1>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium cum tempora ipsam aperiam saepe? Facilis architecto sed numquam nemo recusandae quam tempora incidunt enim possimus sapiente, doloremque repudiandae maxime eveniet.</p>
